@@ -15,6 +15,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.util.Comparator;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -50,7 +51,8 @@ public class PostController {
                     case "count" -> Comparator.comparingInt(Post::getPostCheckCount).reversed();
                     case "like" -> Comparator.comparingInt(Post::getPostLikeCount).reversed();
                     default -> Comparator.comparing(Post::getPostDate).reversed();})
-                .toList(),
+                .toList()
+                .stream().map(PostTitleDto::new).collect(Collectors.toList()),
                 "주식",
                 "stock"));
 
@@ -67,7 +69,8 @@ public class PostController {
                     case "count" -> Comparator.comparingInt(Post::getPostCheckCount).reversed();
                     case "like" -> Comparator.comparingInt(Post::getPostLikeCount).reversed();
                     default -> Comparator.comparing(Post::getPostDate).reversed();})
-                .toList(),
+                .toList()
+                .stream().map(PostTitleDto::new).collect(Collectors.toList()),
                 "자유",
                 "freeBoard"));
 
